Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  - name: nginx-deployment
  - namespace: yuktaNamespace
specs:
  - replicas: 2
    selector:
      matchlabels:
        app: nginx

    template:
      metadata:
        name: yukta-dep-pod
        labels:
          app: nginx
      specs:
        containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
