InitContainer.yaml
kind: Pod
apiVersion: v1
metadata: 
  name: init-test
spec:
  containers:
  - name: main-container
    image: busybox:latest
    command: ["sh", "-c","echo 'Main Container started'"]
