Pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: yukta-first-pod
  namespace: nginx
  labels:
    app: nginx
specs:
  containers:
    - name: yukta-first-container
      image: nginx:latest
      ports: 
        - containerPort: 80
