SideCarContainer.yaml
kind: Pod
apiVersion: v1
metadata: 
  name: sidecar-test
spec:
  containers:
  #produce logs
  - name: main-container
    image: busybox:latest
    command: ["sh", "-c", "while true; do echo 'Hello Dosto' >> /var/log/app.log; sleep 5; done"]
    volumeMounts:
    - name: shared-logs
      mountPath: /var/log/
    
  #display logs  
  containers:
  - name: sidecar-container
    image: busybox:latest
    command: ["sh", "-c","tail -f /var/log/app.log "]
    volumeMounts:
    - name: shared-logs
      mountPath: /var/log/
