StatefulSet.yaml
kind: StatefulSet
apiVersion: app/v1
metadata:
   name: mysql-statefulset
   namespace: mysql
spec: 
  replicas: 3
  selector: 
    matchLabels:
      app: mysql
  templates:
    metadata: 
      labels:
        app: mysql
    specs:
     containers:
     - name: mysql
       image: mysql:8.0
       ports:
       - containerPorts: 3306
      volumeMounts:
        - name: mysql-data
          mountPath: /usr/share/nginx/html
      
 volumeClaimTemplates:
 - metadata:
     name: mysql-data
   spec:
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 1Gi
