Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
  namespace: yuktaNamespace
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: ClusterIP
