Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Yukta-ingress
  namespace: yuktaNamespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: notes-app-service
            port:
              number: 8000
